extends Control

onready var buttons = [
	$MainMargin/HBoxContainer/Elements/Buttons/ResumeButton/Button,
	$MainMargin/HBoxContainer/Elements/Buttons/SettingsButton/Button,
	$MainMargin/HBoxContainer/Elements/Buttons/MainMenuButton/Button,
	$MainMargin/HBoxContainer/Elements/Buttons/QuitButton/Button
]


